[gd_scene load_steps=2 format=3 uid="uid://hud_001"]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="XpContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 10

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/XpContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lv.1"

[node name="XpBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/XpContainer"]
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
max_value = 10.0
value = 0.0
show_percentage = false
